wxc/include/ewxw/wxc_glue.h

/* wxScrolledWindow */
TClassDefExtend(wxScrolledWindow,wxPanel)
void       wxScrolledWindow_AdjustScrollbars( TSelf(wxScrolledWindow) _obj );
void       wxScrolledWindow_CalcScrolledPosition( TSelf(wxScrolledWindow) _obj, TPoint(x,y), TPointOutVoid(xx,yy) );
void       wxScrolledWindow_CalcUnscrolledPosition( TSelf(wxScrolledWindow) _obj, TPoint(x,y), TPointOutVoid(xx,yy) );
TClass(wxScrolledWindow) wxScrolledWindow_Create( TClass(wxWindow) _prt, int _id, TRect(_lft,_top,_wdt,_hgt), int _stl );
void       wxScrolledWindow_EnableScrolling( TSelf(wxScrolledWindow) _obj, TBool x_scrolling, TBool y_scrolling );
double     wxScrolledWindow_GetScaleX( TSelf(wxScrolledWindow) _obj );
double     wxScrolledWindow_GetScaleY( TSelf(wxScrolledWindow) _obj );
int        wxScrolledWindow_GetScrollPageSize( TSelf(wxScrolledWindow) _obj, int orient );
void       wxScrolledWindow_GetScrollPixelsPerUnit( TSelf(wxScrolledWindow) _obj, TPointOutVoid(_x,_y) );
TClass(wxWindow) wxScrolledWindow_GetTargetWindow( TSelf(wxScrolledWindow) _obj );
void       wxScrolledWindow_GetViewStart( TSelf(wxScrolledWindow) _obj, TPointOutVoid(_x,_y) );
void       wxScrolledWindow_GetVirtualSize( TSelf(wxScrolledWindow) _obj, TSizeOutVoid(_x,_y) );
void       wxScrolledWindow_OnDraw( TSelf(wxScrolledWindow) _obj, TClass(wxDC) dc );
void       wxScrolledWindow_Scroll( TSelf(wxScrolledWindow) _obj, TPoint(x_pos,y_pos) );
void       wxScrolledWindow_SetScale( TSelf(wxScrolledWindow) _obj, double xs, double ys );
void       wxScrolledWindow_SetScrollPageSize( TSelf(wxScrolledWindow) _obj, int orient, int pageSize );
void       wxScrolledWindow_SetScrollbars( TSelf(wxScrolledWindow) _obj, int pixelsPerUnitX, int pixelsPerUnitY, int noUnitsX, int noUnitsY, int xPos, int yPos, TBoolInt noRefresh );
void       wxScrolledWindow_SetTargetWindow( TSelf(wxScrolledWindow) _obj, TClass(wxWindow) target );